# postmodern-cookiecutter

./: .gitignore  .pre-commit-config.yaml  cookiecutter.json  pyproject.toml
.github/workflows/: code-check.yml  test.yml
src/template/: __main__.py
src/template/cli/: __init__.py
tests/: __init__.py  test_cli.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: code-check.yml  test.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __main__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/cli/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_cli.py
